# MAGI-public

./: .brain_ngl_hint.json  .env.example  .gitignore  Balthasar Dashboard.command  CONSTITUTION.md  Caddyfile_openclaw  LAF_結案修復驗證指南.md  LICENSE  MAGI_Dashboard.html  MAGI_SAAS_ROADMAP.md  MAGI_重構部署指南.md  README.md  README.zh-TW.md  SECURITY.md  SUPPORT.md  check_codex_distributed_health.sh  check_judicial_api_pipeline.sh  check_openclaw_auth_mode.sh  check_openclaw_runtime_mode.sh  cron_jobs.json  daemon.py  init_auth.sql  magi_status.json  melchior_agent.py  osc.py  package-lock.json  process_sprites.py  pyproject.toml  requirements-optional.txt  requirements-windows.txt  requirements.txt  restart_casper.sh  setup_magi_brain.sql  setup_wizard.py  sitecustomize.py  start_balthasar.sh  start_casper.sh  start_magi.bat  start_magi.sh  start_melchior.sh  (+2 more)
.backup/: omlx.settings.20260403_151433.json
.claude/: launch.json
For_Balthasar_Setup/: DEPLOY_BALTHASAR.md  balthasar_agent_v2.py
For_Melchior_Setup/: DEPLOY_MELCHIOR.md  README.txt  melchior.env.example  melchior_agent.py  melchior_agent_v2.py  start_melchior.bat  start_melchior_v2.bat
api/: __init__.py  admin_allowlist.py  answer_provenance.py  app_factory.py  authz.py  autopilot_artifacts.py  case_display.py  case_path_mapper.py  channel_context.py  command_registry.py  config_overlay.py  court_case_type_map.py  csrf_guard.py  db_failover.py  db_helper.py  db_sync.py  debt_document_generator.py  debug_capture.py  discord_bot.py  discord_channel_router.py  hallucination_guard.py  help_text.py  laf_case_classifier.py  legal_workflow.py  line_compat.py  model_config.py  mysql_connector_guard.py  nas_mount_guard.py  openclaw_compat.py  orchestrator.py  orchestrator_core.py  osc_document_generator.py  poa_chat_handler.py  product_runtime.py  red_phone.py  request_guards.py  runtime_paths.py  server.py  startup.py  thread_pools.py  (+2 more)
config/: test_matrix.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  CHANGELOG_20260402.md  COMMERCIAL_READINESS.md  DATA_RETENTION_POLICY.md  ENV_REFERENCE.md  LAF_CLOSING_PORTAL_AUDIT_20260326.md  LAF_CODE_CHANGES_20260326.md  LAF_PORTAL_FIELD_MAP_20260326.md  LAF_PORTAL_PROGRESS_FIELD_MAP_20260417.md  LEGAL_AGENT_GUARDRAILS.md  LEGAL_WORKFLOW.md  MAGI_Agent_Evolution_Plan.md  MAGI_Google_Calendar_Dedup_And_Audit_Plan_20260422.md  MAGI_智慧改善計畫.md  OPERATOR_RUNBOOK.md  PRIVACY_POLICY.md  PRIVATE_OPERATION_MANUAL.md  PUBLIC_OPERATION_MANUAL.md  TESTING_SYSTEM.md  (+10 more)
(+1323 files in other folders)
