[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magi"
version = "1.0.0"
description = "Multi-Agent Governance Infrastructure"
requires-python = ">=3.12"
readme = "README.md"
license-files = ["LICENSE"]

# P0-07: Core dependencies（從 requirements.txt 遷移）
dependencies = [
    "flask>=3.0",
    "Flask-Login>=0.6",
    "Werkzeug>=3.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "mysql-connector-python>=8.2",
    "psutil>=5.9",
    "flask-cors>=4.0",
]

[project.optional-dependencies]
# 通道整合（非核心啟動必需）
channels = [
    "discord.py>=2.3",
    "line-bot-sdk>=3.5",
    "python-telegram-bot>=20.0",
]
# PDF 處理
pdf = [
    "PyMuPDF>=1.23",
    "pypdf>=3.17",
    "pdfplumber>=0.10",
    "reportlab>=4.0",
    "pdf2image>=1.16",
    "Pillow>=10.0",
]
# 文件處理
docs = [
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "lxml>=4.9",
    "defusedxml>=0.7",
    "EbookLib>=0.18",
]
# OCR
ocr = [
    "rapidocr-onnxruntime>=1.3",
]
# 瀏覽器自動化
browser = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
]
# AI / 嵌入
ai = [
    "numpy>=1.24",
    "faiss-cpu>=1.7",
]
# Google APIs
google = [
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
]
# 工具
utils = [
    "python-dateutil>=2.8",
    "holidays>=0.40",
    "pyperclip>=1.8",
    "feedparser>=6.0",
    "watchdog>=3.0",
]
# GUI
gui = [
    "tkcalendar>=1.6",
]
# 開發工具
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
# 完整安裝
all = [
    "magi[channels,pdf,docs,ocr,browser,ai,google,utils,gui]",
]

[project.scripts]
magi-start = "bin.start:main"
magi-check = "bin.check:main"

[tool.setuptools.packages.find]
include = ["api*", "skills*", "bin*"]
exclude = ["tests*", "backups*", "archive*", "_autopilot_runs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
